cmake_minimum_required(VERSION 3.28)
project(HW2)

set(CMAKE_CXX_STANDARD 17)

include_directories(dry)
include_directories(wet)

add_executable(HW2
        #        dry/main.cpp
        #        dry/Pirate.cpp
        #        dry/Pirate.h
        #        wet/tests.cpp
        wet/Utilities.cpp
        wet/Utilities.h
        wet/Matrix.cpp
        wet/Matrix.h
        wet/Matrix.h
        wet/Matrix.h
        wet/MataMvidia.cpp
        wet/tests.cpp)
